<resources>
    <!-- App name -->
    <string name="app_name">Weather Checker</string>

    <!-- Google Maps API key -->
    <string name="google_maps_api" templateMergeStrategy="preserve" translateable="false">
        AIzaSyC7wzlO8NFkzopqNXx7QIkIQr4v2N2-Vr0</string>

    <!-- Title Activity Strings -->
    <string name="titleActivityName">Activity Location Weather Checker</string>
    <string name="titleActivtyContinue">Tap Anywhere to Continue</string>

    <!-- Menu Activity Strings -->
    <string name="menuActivtyCurrentLocWeather">Current Location Weather</string>
    <string name="tableTemp">Current Temperature</string>
    <string name="tableMaxTemp">Max Temperature</string>
    <string name="tableMinTemp">Min Temperature</string>
    <string name="tableHumidity">Humidity</string>
    <string name="tablePressure">Pressure</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="addInfoTitle">Add Activity Information</string>
    <string name="addDate">Date: </string>
    <string name="addActivtyName">Activity Name: </string>
    <string name="addLoactionName">Location (City): </string>
    <string name="title_activity_maps">MapsActivity</string>


</resources>
