<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/activity_menu_layout"
    tools:context="bit.fielgm2.activityweatherchecker.MenuActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/menuActivtyCurrentLocWeather"
        android:id="@+id/menuCurrentWeatherTitle"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/table"
        android:layout_below="@+id/menuCurrentWeatherTitle"
        android:layout_centerHorizontal="true">
        <TableRow>
            <TextView
                android:text="@string/tableTemp"
                android:padding="@dimen/tableCellPadding" />
            <TextView
                android:text=""
                android:id="@+id/tableCurrTemp"
                android:gravity="right"
                android:padding="@dimen/tableCellPadding" />
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/tableMinTemp"
                android:padding="@dimen/tableCellPadding" />
            <TextView
                android:text=""
                android:gravity="right"
                android:id="@+id/tableMinTemp"
                android:padding="@dimen/tableCellPadding" />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/tableMaxTemp"
                android:padding="@dimen/tableCellPadding" />
            <TextView
                android:text=""
                android:id="@+id/tableMaxTemp"
                android:gravity="right"
                android:padding="@dimen/tableCellPadding" />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/tableHumidity"
                android:padding="@dimen/tableCellPadding" />
            <TextView
                android:text=""
                android:id="@+id/tableHumidity"
                android:gravity="right"
                android:padding="@dimen/tableCellPadding" />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/tablePressure"
                android:padding="@dimen/tableCellPadding" />
            <TextView
                android:text=""
                android:id="@+id/tablePressure"
                android:gravity="right"
                android:padding="@dimen/tableCellPadding" />
        </TableRow>

    </TableLayout>

    <ListView
        android:paddingTop="@dimen/tablePadding"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:id="@+id/menu_list_view"
        android:layout_below="@+id/table"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
