<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="bit.fielgm2.activityweatherchecker.DisplayWeatherActivty">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/titlePadding"
        android:layout_marginLeft="@dimen/tablePadding"
        android:id="@+id/tableLayout">
        <TableRow>
            <TextView
                android:text="@string/tableTemp"
                android:padding="@dimen/tableCellPadding"
                android:id="@+id/dayTxtView"/>
            <TextView
                android:text=""
                android:id="@+id/tableCurrTemp1"
                android:gravity="right"
                android:padding="@dimen/tableCellPadding" />
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/tableMinTemp"
                android:padding="@dimen/tableCellPadding" />
            <TextView
                android:text=""
                android:gravity="right"
                android:id="@+id/tableMinTemp1"
                android:padding="@dimen/tableCellPadding" />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/tableMaxTemp"
                android:padding="@dimen/tableCellPadding" />
            <TextView
                android:text=""
                android:id="@+id/tableMaxTemp1"
                android:gravity="right"
                android:padding="@dimen/tableCellPadding" />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/tableHumidity"
                android:padding="@dimen/tableCellPadding" />
            <TextView
                android:text=""
                android:id="@+id/tableHumidity1"
                android:gravity="right"
                android:padding="@dimen/tableCellPadding" />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/tablePressure"
                android:padding="@dimen/tableCellPadding" />
            <TextView
                android:text=""
                android:id="@+id/tablePressure1"
                android:gravity="right"
                android:padding="@dimen/tableCellPadding" />
        </TableRow>

    </TableLayout>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/daySpinner"
        android:layout_below="@+id/tableLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp" />
</RelativeLayout>
