<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddInfoActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/addInfoTitle"
        android:id="@+id/addInfoTitleTxtBox" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/addActivtyName"
        android:id="@+id/addNameTxtBox"
        android:layout_marginTop="42dp"
        android:layout_below="@+id/addInfoTitleTxtBox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/addDate"
        android:id="@+id/addDateTxtBox"
        android:layout_marginTop="42dp"
        android:layout_below="@+id/addNameTxtBox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/addLoactionName"
        android:id="@+id/addLocationTxtBox"
        android:layout_marginTop="53dp"
        android:layout_below="@+id/addDateTxtBox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="@dimen/editTxtLength"
        android:layout_height="wrap_content"
        android:id="@+id/nameEditTxt"
        android:layout_alignTop="@+id/addNameTxtBox"
        android:layout_toRightOf="@+id/addNameTxtBox"
        android:layout_toEndOf="@+id/addNameTxtBox" />

    <EditText
        android:layout_width="@dimen/editTxtLength"
        android:layout_height="wrap_content"
        android:id="@+id/locationEditTxt"
        android:layout_alignTop="@+id/addLocationTxtBox"
        android:layout_toRightOf="@+id/addLocationTxtBox"
        android:layout_toEndOf="@+id/addLocationTxtBox" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save Activity \nInformation"
        android:id="@+id/addToDbBtn"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Return to Menu"
        android:id="@+id/returnMenuBtn"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pick Date"
        android:onClick="showDatePickerDialog"
        android:layout_alignTop="@+id/addDateTxtBox"
        android:layout_alignRight="@+id/nameEditTxt"
        android:layout_alignEnd="@+id/nameEditTxt" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text=""
        android:id="@+id/dateTxtView"
        android:layout_above="@+id/addLocationTxtBox"
        android:layout_toRightOf="@+id/addLocationTxtBox"
        android:layout_toEndOf="@+id/addLocationTxtBox" />

</RelativeLayout>
